[package]
name = "repo-context"
version = "0.1.0"
edition = "2024"
authors = ["coder-maks"]
description = "Generate repository context for AI consumption"
license = "MIT"

[dependencies]
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
